# gerrit-dash-creator

./: .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  TODO.rst  bindep.txt  gerrit-bug-dash  gerrit-dash-creator  index.tpl  other-requirements.txt  requirements.txt  review-bugs.py  setup.cfg  test-requirements.txt  tox.ini
dashboards/: ThirdPartyCI.dash  all-the-specs.dash  api-docs-impact.dash  api-wg.dash  app-catalog.dash  bifrost.dash  chef_watched.dash  cinder-priorities.dash  cinder.dash  cloud-init.dash  compute-drivers.dash  compute-program.dash  config-core.dash  cross-project.dash  designate-ptl-overview.dash  designate-release.dash  designate.dash  devstack.dash  diskimage-builder.dash  doc-install-guides.dash  doc-program.dash  doc.dash  docimpact.dash  docsnews.dash  docsux.dash  fuel-ccp.dash  fuel-docs.dash  fuel-library.dash  fuel-lma.dash  fuel-logging-monitoring-alarming.dash  fuel-python.dash  fuel.dash  gate-changes.dash  glance.dash  heat.dash  horizon-related-repos.dash  horizon-stable.dash  horizon.dash  ironic-inspector.dash  ironic-with-negative.dash  (+68 more)
dashboards/third_party_ci/: hp_cinder_ci.dash  hp_storage_ci.dash  purestorage.dash
doc/source/: conf.py  index.rst  installation.rst  usage.rst
gerrit_dash_creator/: __init__.py
gerrit_dash_creator/cmd/: bugs.py  creator.py  review-bugs.py
personal/: harlowja-misc.dash  seans-misc.dash
templates/: single.rst  single.txt
tools/: generate_dashboards.sh
