[metadata]
name = gerrit-dash-creator
summary = Gerrit Dashboard Creator
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://git.openstack.org/cgit/openstack/gerrit-dash-creator
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    gerrit_dash_creator
data_files =
    share/gerrit-dash-creator/dashboards = dashboards/*
    share/gerrit-dash-creator/templates = templates/*

[entry_points]
console_scripts =
    gerrit-dash-creator = gerrit_dash_creator.cmd.creator:main
    gerrit-bug-dash = gerrit_dash_creator.cmd.bugs:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
